--- a/vcard-personal-portfolio-master/index.html
+++ b/vcard-personal-portfolio-master/index.html
@@ -126,7 +126,7 @@
         <div class="separator"></div>
 
         <div class="resume-view"></div>
-          <a href="./assets/images/cv ayush.pdf.pdf" class="resume-btn" target="_blank">
+          <a href="./assets/images/Ayush_Resume.pdf" class="resume-btn" target="_blank">
             <ion-icon name="eye-outline"></ion-icon>
             <span>View Resume</span>
           </a>
@@ -510,7 +510,7 @@
 
         </section>
         <div class="resume-view">
-          <a href="./assets/images/cv ayush.pdf.pdf" class="resume-btn" target="_blank">
+          <a href="./assets/images/Ayush_Resume.pdf" class="resume-btn" target="_blank">
             <ion-icon name="eye-outline"></ion-icon>
             <span>View Resume</span>
           </a>
