--- a/vcard-personal-portfolio-master/index.html
+++ b/vcard-personal-portfolio-master/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/my-avatar.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/ayush.jpg" type="image/x-icon" style="border-radius: 100%;">
 
   <!--
     - custom css link
@@ -42,13 +42,13 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Om Kharche" width="80">
+          <img src="./assets/images/ayush.jpg" alt="Om Kharche" width="80">
         </figure>
 
         <div class="info-content">
           <h1 class="name" title="Om Kharche">Ayush Gabani</h1>
 
-          <p class="title">Full Stack Developer</p>
+          <p class="title">Web Developer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
