--- a/vcard-personal-portfolio-master/index.html
+++ b/vcard-personal-portfolio-master/index.html
@@ -46,7 +46,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Om Kharche">Ayush Gabani</h1>
+          <h1 class="name" title="Om Kharche">Ayush GAbani</h1>
 
           <p class="title">Web Developer</p>
         </div>
