--- a/vcard-personal-portfolio-master/index.html
+++ b/vcard-personal-portfolio-master/index.html
@@ -1145,17 +1145,17 @@
 
           <h3 class="h3 form-title">Contact Form</h3>
 
-          <form action="https://formsubmit.co/ayushgabani24@gmail.com" method="POST" class="form" data-form>
+          <form action="https://api.web3forms.com/submit" method="POST" class="form" data-form id="smsForm">
 
             <div class="input-wrapper">
-              <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
+              <input type="fullname" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
 
               <input type="email" name="email" class="form-input" placeholder="Email address" required data-form-input>
             </div>
 
             <textarea name="message" class="form-input" placeholder="Your Message" required data-form-input></textarea>
 
-            <button class="form-btn" type="submit" >
+            <button class="form-btn" type="submit" name="access_key" value="90430901-cfa0-4188-9484-b7cc8b4b7088">
               <ion-icon name="paper-plane"></ion-icon>
               <span>Send Message</span>
             </button>
